--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mdi/font": "^7.4.47",
         "@supabase/supabase-js": "^2.75.1",
         "@tiptap/extension-image": "^3.7.2",
+        "@tiptap/extension-placeholder": "^3.7.2",
         "@tiptap/extension-underline": "^3.7.2",
         "@tiptap/starter-kit": "^3.7.2",
         "@tiptap/vue-3": "^3.7.2",
