--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
         "@types/bcryptjs": "^2.4.6",
         "@vitejs/plugin-vue": "^6.0.1",
         "@vue/tsconfig": "^0.8.1",
+        "apexcharts": "^5.3.5",
         "bcryptjs": "^3.0.2",
+        "chart.js": "^4.5.1",
         "firebase": "^12.3.0",
         "firebase-admin": "^13.5.0",
         "pinia": "^3.0.3",
         "typescript": "^5.9.3",
         "vite": "^7.1.9",
         "vue": "^3.5.22",
+        "vue-chartjs": "^5.3.2",
         "vue-draggable-next": "^2.3.0",
         "vue-router": "^4.5.1",
+        "vue3-apexcharts": "^1.10.0",
         "vuetify": "^3.10.5"
     },
     "devDependencies": {
