--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,11 @@ VITE_FIREBASE_STORAGE_BUCKET=your-project-id.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 
+# Supabase Configuration
+# Get these values from: Supabase Dashboard → Settings → API
+
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
 # Note: Never commit your actual .env file with real credentials to version control!
 # The .env file should be added to .gitignore
