--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,11 @@
 {
-	"include": [
-		"env.d.ts",
-		"src/**/*",
-		"src/**/*.vue"
-	],
-	"exclude": [
-		"src/**/__tests__/*"
-	],
-	"compilerOptions": {
-		"composite": true,
-		"baseUrl": ".",
-		"paths": {
-			"@/*": [
-				"./src/*"
-			]
+	"files": [],
+	"references": [
+		{
+			"path": "./tsconfig.app.json"
+		},
+		{
+			"path": "./tsconfig.node.json"
 		}
-	}
+	]
 }
